try to enable e2e test at entities

--- a/generators/react-native/templates/app/modules/entities/entity-e2e-test.js.ejs
+++ b/generators/react-native/templates/app/modules/entities/entity-e2e-test.js.ejs
@@ -51,7 +51,7 @@ Date.prototype.toCustomLocalDate = function() {
 }
 _%>
 
-describe.skip('<%= entityNameCapitalized %> Screen Tests', () => {
+describe<%- authenticationTypeOauth2 ? '.skip' : '' %>('<%= entityNameCapitalized %> Screen Tests', () => {
   beforeEach(async () => {
     await reloadApp();
     await loginAsUser();
